Began on the basics.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
+<!doctype html>
 
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Rory Ray Portfolio</title>
+  <meta name="description" content="My portfolio.">
+  <meta name="author" content="Rory Roberts">
+
+  <link rel="stylesheet" href="css/index.css">
+
+</head>
+
+<body>
+  <script src="js/scripts.js"></script>
+  <header>
+      <h1>Hello! Welcome to my Portfolio!</h1>
+  </header>
+</body>
+</html>
