--- a/index.html
+++ b/index.html
@@ -16,6 +16,40 @@
   <script src="js/scripts.js"></script>
   <header>
       <h1>Hello! Welcome to my Portfolio!</h1>
+      <div>
+        <a>Home</a>
+        <a>Projects</a>
+        <a>About</a>
+        <a>Contact Me</a>
+      </div>
   </header>
+  <section>
+    <div>
+      <img src="#" alt="Portfolio Image">
+    </div>
+    <div>
+      <h2>Hi, I'm Rory.</h2>
+      <p>I'm a Software Developer from the Land of Enchantment. Due to my background in Philosophy and Education 
+        I have a passion for EdTech. My other passions include making cool websites, learning new tech stacks and 
+        traveling. 
+      </p>
+    </div>
+  </section>
+  <section>
+    <div>
+      <div>
+        <img src="" alt="Placeholder">
+        <a href="#">Placeholder</a>
+      </div>
+      <div>
+        <img src="" alt="Placeholder">
+        <a href="#">Placeholder</a>
+      </div>
+      <div>
+        <img src="" alt="Placeholder">
+        <a href="#">Placeholder</a>
+      </div>
+    </div>
+  </section>
 </body>
 </html>
